@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2002/10/28 18:40:22 uebayasi Exp $
+# $NetBSD: Makefile,v 1.2 2002/12/31 03:27:57 uebayasi Exp $
 
-DISTNAME=	navi2ch-1.6.0
+DISTNAME=	navi2ch-1.6.1
 CATEGORIES=	chat
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=/navi2ch}
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=navi2ch/}
 
 MAINTAINER=	uebayasi@netbsd.org
 HOMEPAGE=	http://navi2ch.sourceforge.net/
